--- a/Web_Scraping.ipynb
+++ b/Web_Scraping.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPO4un5uJEeqoPRyumJ99XF",
+      "authorship_tag": "ABX9TyNzLiB+3vxDB1AdydMDWPCo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,6 +62,15 @@
       },
       "execution_count": 74,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Fetching URL and Specific Section"
+      ],
+      "metadata": {
+        "id": "WUyLO2dJ4q8N"
+      }
     },
     {
       "cell_type": "code",
